-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15, 6.6.0, 6.7.0
-
None
-
-
bc977c13e (dev), e4c17ba38 (6.7), df6b9451d (6.6), 78cdfdc81 (tqtc/lts-6.5), aa6fa81fe (tqtc/lts-6.2)
-
Foundation Sprint 103
In the SatelliteInfo example, when you click "Stop", and then "Single", the application crashes. I have found that the source of the crash is in ApplicationScreen.qml in line 45, where the function positionSource.update() is called. If you remove this line of code, the application will not crash when you click "Single".
For 6.6.0, the crash occurs when building the example with the 6.6.0 MSVC 2019 64bit kit. It does however not occur when building with the 6.6.0 MinGW 64-bit kit, resulting in the example operating normally.
Steps to reproduce
- Build with the MSVC kit, or with dev, and run the example.
- Click "Stop".
- Click "Single". Notice that the application crashes.
- Remove the specified line of code.
- Build and run the example again.
- Repeat steps 1 and 2, and notice that the application does not crash anymore.
Example image

| For Gerrit Dashboard: QTBUG-119477 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 546844,3 | Windows: fix a potential crash when requesting a single update | dev | qt/qtpositioning | Status: MERGED | +2 | 0 |
| 547121,2 | Windows: fix a potential crash when requesting a single update | 6.7 | qt/qtpositioning | Status: MERGED | +2 | 0 |
| 547286,2 | Windows: fix a potential crash when requesting a single update | 6.6 | qt/qtpositioning | Status: MERGED | +2 | 0 |
| 547331,2 | Windows: fix a potential crash when requesting a single update | tqtc/lts-6.5 | qt/tqtc-qtpositioning | Status: MERGED | +2 | 0 |
| 547428,2 | Windows: fix a potential crash when requesting a single update | tqtc/lts-6.2 | qt/tqtc-qtpositioning | Status: MERGED | +2 | 0 |