Windows: fix a potential crash when requesting a single update

The startHandler() method can set an error and return false in case
of an error.
Suppose that the client code decides to replace the plugin in case of
an error (that's exactly what the SatelliteInfo example does).
Then the following scenario is possible:
* QGeoPositionInfoSourceWinRT::requestUpdate() is called
* It calls startHandler(), which returns false and sets an error
* The client code handles the error and decides to use another backend
* During the backend change, the current windows backend is deleted...
* ... and we're back in QGeoPositionInfoSourceWinRT::requestUpdate(),
  trying to dereference the already-removed d_ptr.

Fix the issue by making sure that we do not do anything if
startHandler() returns false.

Fixes: QTBUG-119477
Pick-to: 6.5 6.2
Change-Id: Ifc15c7f397591b888cba81c47965c87bff1e1913
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit bc977c13ef8991743173f3dbc957eecbe82eb3b5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit e4c17ba38205254bd087fb41a4f128b8f1069bd3)